# creative_coding_project

./: .gitattributes  .gitignore  Cargo.toml  How to navigate the source code.md  README.md  ]  parameter_reference.md  rust_101.md
.github/workflows/: rust.yml
assets/images/: CCP showcase short.mov
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/creative_coding_project/: all.html  index.html  sidebar-items.js
src/: _nannou_egui.rs  fonts.rs  lib.rs  main.rs  prelude.rs  settings.rs  simd.rs
src/_musical/: mod.rs  note.rs
src/app/: key.rs  key_press.rs  mod.rs  model.rs  mouse.rs
src/app/audio/: _buffer.rs  buffer.rs  context.rs  mod.rs  model.rs  model_old.rs  process.rs
src/app/event/: mod.rs
src/app/key/: mod.rs
src/app/model/: audio_constructor.rs  constructors.rs  mod.rs
src/app/mouse/: mod.rs
src/app/musical/: chord.rs  mod.rs  note.rs  rhythm.rs  rhythm16.rs  scale.rs  sequence.rs  sequencer.rs
src/app/params/: list.md  mod.rs  types.rs  ui.rs
src/app/update/: mod.rs
src/app/view/: mod.rs
src/dsp/: adsr.rs  delay.rs  dry_wet.rs  effect_trait.rs  mod.rs  ping_pong_delay.rs  ramp.rs  ramp_old.rs  ring_buffer.rs  stereo_wrapper.rs  utility.rs  width.rs
src/dsp/delay/: delay.rs  mod.rs  ping_pong_delay.rs  ring_buffer.rs  stereo_delay.rs
src/dsp/distortion/: decimation.rs  freq_shifter.rs  mod.rs  ring_modulation.rs  waveshaper.rs
src/dsp/dynamics/: adsr.rs  compressor.rs  mod.rs
src/dsp/filtering/: mod.rs
src/dsp/filters/: ballistics.rs  dc_filter.rs  mod.rs  one_pole_lowpass.rs  resonator_bank.rs  two_pole_resonator.rs
src/dsp/modulation/: chorus.rs  mod.rs
src/dsp/oversampling/: _lanczos_stage_multichannel.rs  block.rs  lanczos.rs  lanczos_stage.rs  mod.rs
src/dsp/oversampling_old/: block.rs  equiripple_fir.rs  lanczos.rs  lanczos_stage.rs  mod.rs
src/dsp/oversampling_unused/: oversampler.rs
src/dsp/spectral/: mask.rs  mod.rs
src/dsp/synthesis/: generator.rs  mod.rs  phasor.rs  sine.rs
src/dsp/util/: dry_wet.rs  effect_trait.rs  mod.rs  stereo_wrapper.rs  utility.rs
src/generative/: contours.rs  fractal_tree.lua  mod.rs
src/generative/contours/: contours.wgsl  contours_gpu.rs  mod.rs
src/generative/fractal_tree/: branch.rs  mod.rs  tree.rs
src/generative/l_system/: mod.rs
src/generative/perlin/: mod.rs
src/generative/reaction_diffusion/: mod.rs
src/generative/smooth_life/: grid.rs  mod.rs  process.rs  process_async.rs  state.rs
src/generative/smooth_life_old/: mod.rs  process.rs
src/generative/space_colonization/: leaf.rs  limb.rs  mod.rs
src/generative/vectors/: mod.rs
src/generative/voronoi/: compute.rs  general.rs  mod.rs  voronoi.glsl  voronoi.wgsl
src/gui/: colors.rs  draw_trait.rs  draw_traits.rs  gradient.rs  mod.rs  rdp.rs
src/gui/components/: button.rs  eq_display.rs  label.rs  menu.rs  menu_trait.rs  mod.rs  text_slider.rs
src/gui/egui/: mod.rs
src/gui/layout/: mod.rs
src/gui/spectrum/: analyzer.rs  analyzer_old.rs  log_lines.rs  mod.rs  process.rs
src/gui/ui/: components.rs  layout.rs  mod.rs
src/musical/: mod.rs  note.rs
src/musical/poly/: mod.rs
src/shaders/util/: fbm.wgsl  perlin2.wgsl  perlin3.wgsl  (+4 more)
src/util/: atomic_load.rs  atomic_ops.rs  general.rs  interp.rs  mod.rs  ramp_old.rs  smoothed_float.rs  thread_pool.rs  window.rs  xfer.rs
(+734 files in other folders)
