[package]
name = "creative_coding_project"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75" # Error handling
atomic_float = "0.1.0"
dyn-clone = "1.0.14"
earcutr = "0.4.2" # Mesh triangulation
egui = "0.23.0" # egui - GUI library
egui_wgpu_backend = "0.14"
nannou = "0.18.1" # Creative coding library
nannou_audio = "0.18.0" # Audio stuff
rand = "0.8.5" # RNG
realfft = "3.3.0" # Fast Fourier Transform
serde = "1.0.188" # (De)serialisation
triple_buffer = "6.2.0" # Triple buffering for some visuals
wide = "0.7.12" # SIMD types
