[package]
name = "creative_coding_project"
version = "1.0.0"
edition = "2021"
authors = ["jamiegibney <jamiegibneyuk@gmail.com>"]
rust-version = "1.74.0"
description = "Creative Coding Project module submission"
readme = "./README.md"
repository = "https://github.com/jamiegibney/creative_coding_project"

[package.metadata.bundle]
name = "Creative Coding Project"
identifier = "com.jamiegibney.ccp"
version = "1.0.0"
icon = [
    "./assets/icons/icon_128.png",
    "./assets/icons/icon_256.png",
]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"           # Error handling
async-std = "1.12.0"        # Async standard library
atomic = "0.6.0"            # Atomic wrapper around types
atomic_float = "0.1.0"      # Atomic floating-point types
bytemuck = "1.14.0"         # Type casting etc.
crossbeam-channel = "0.5.8" # Fast MPMC channels
dyn-clone = "1.0.14"        # Clone trait for dynamically dispatched objects
earcutr = "0.4.2"           # Mesh triangulation
nannou = "0.18.1"           # Creative coding library
nannou_audio = "0.18.0"     # Audio-related for the above
noise = "0.8.2"             # Noise algorithms
rand = "0.8.5"              # Random number generation
rayon = "1.8.0"             # Parallel iterators
realfft = "3.3.0"           # Fast Fourier transform
serde = "1.0.188"           # (De)serialisation
triple_buffer = "7.0.0"     # Triple buffer channel
wide = "0.7.12"             # SIMD types
